<?xml version="1.0"?>
<package format="3">
  <name>arm_control</name>
  <version>0.0.1</version>
  <description>Robotic arm control module</description>
  <maintainer email="youremail@example.com">Lalitha V</maintainer>
  <license>MIT</license>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
