<?xml version="1.0"?>
<package format="3">
  <name>llm_orchestrator</name>
  <version>0.0.1</version>
  <description>LLM integration node</description>
  <maintainer email="your@email.com">Lalitha V</maintainer>
  <license>MIT</license>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>openai</exec_depend>
</package>
