<?xml version="1.0"?>
<package format="3">
  <name>cv_inspection</name>
  <version>0.0.1</version>
  <description>Computer vision module</description>
  <maintainer email="your@email.com">Lalitha V</maintainer>
  <license>MIT</license>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>opencv</exec_depend>
</package>
